--- a/style.css
+++ b/style.css
@@ -179,6 +179,10 @@ html {
 
 .container.header {
   display: flex;
+  padding-top:24px;
+  padding-bottom: 25px;
+  justify-content: center;
+  align-items: center;
 }
 
 .contaoner.header nav {
@@ -197,10 +201,20 @@ html {
 
 .df {
   display: flex;
-  justify-content:  ;
+  justify-content:  center;
 }
 
 .fg {
   width: 270px;
+}
+
+.nav-link-1,
+.u:not(:first-child) {
+  margin-left: 50px;
+}
+
+nav-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
